# hackathon-loupe

./: .gitignore  .pre-commit-config.yaml  Home.py  README.md  app.py  pyproject.toml  requirements.txt
.streamlit/: config.toml  example.secrets.toml
_pages/: first_page.py  navigation.py  slides.py
core/: navigation_agent.py
core/navigation/: agent.py  llm.py  utils.py
core/slides/: ai_requests.py  utils.py
core/tonic/: eval.py
pages/: first_page.py  navigation.py  slides.py
slides_core/: ai_requests.py  google_requests.py  index.py  slides.py  utils.py
