[tool.poetry]
name = "hackathon-loupe"
version = "0.1.0"
description = ""
authors = ["llermaly <gllermaly@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
clarifai = "^10.0.0"
streamlit = "^1.30.0"
tarsier = "^0.5.6"
llama-index = "^0.9.34"
pydantic = "^2.5.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
